# placetostay

./: README.md  pyproject.toml
DataProcess/job/: ai_gen_description_job.py  dummy_weather_job.py  dummy_weather_processor.py  hotel_data_job.py  load_hotel_data.py  stat_tourism.py  stat_tourism_job.py
DataProcess/scripts/: DBDataProcessor.py  DataHotelProcessor.py  DummyWeather.py  GenDescriptionCountryProc.py  TourStatsDataProcessor.py  data_hotel_processor.py  dummy_weather.py  map_countries.py  stat_class.py  tour_stat_data_processor.py
config/: config.yaml
helpers/: job_utils.py  map_countries.py
logger/: __init__.py  colored_logger.py
placetostay/common_scripts/: tuple_countries.py
webplace/: manage.py
webplace/WorldHotels/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
webplace/WorldHotels/common_methods_views/: common.py
webplace/WorldHotels/templates/WorldHotels/: detail.html  index.html  result.html  search.html
webplace/WorldHotels/templatetags/: star_rating.py
webplace/static/css/: main.css
webplace/static/css/base/: typography.css  variables.css
webplace/static/css/components/: buttons.css  cards.css  carousel.css  modals.css  video.css
webplace/static/css/layout/: footer.css  header.css  nav.css
webplace/static/css/pages/: about.css  contact.css  home.css
webplace/static/js/additions/: hotel_map.js
webplace/static/js/forms/: hotel_search.js
webplace/templates/: base.html
webplace/webplace/: asgi.py  settings.py  urls.py  wsgi.py
