[tool.poetry]
name = "placetostay"
version = "0.1.0"
description = "awesome project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
psycopg2 = "^2.9.9"
pandas = "^2.2.1"
psycopg2-binary = "^2.9.9"
pyyaml = "^6.0.1"
colorlog = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
